--- a/resources/dark.css
+++ b/resources/dark.css
@@ -4,19 +4,20 @@ QWidget
     background-color:  rgb(42, 42, 42);
     color: rgb(160, 160, 160);
     border: 1px solid rgb(30, 30, 30);
-    border-radius: 5px;
+    border-radius: 2px;
     selection-background-color: rgb(167, 167, 167);
     selection-color: rgb(26, 26, 26);
 }
 
 QFrame, QLineEdit, QComboBox, QSpinBox
 {
-    background-color: rgb(35, 35, 35)
+    /*background-color: rgb(35, 35, 35)*/
 }     
 QLabel
 {
     color:rgb(160, 160, 160);
-    background-color: rgb(42, 42, 42);
+    /*background-color: rgb(42, 42, 42);*/
+    background-color: none;
     border:none;
 }
 QComboBox:on  
@@ -26,7 +27,7 @@ QComboBox:on
 }
 QScrollArea > QWidget
 {
-    background-color:  rgb(35, 35, 35);
+    /*background-color:  rgb(35, 35, 35);*/
 }
 
 
@@ -117,8 +118,7 @@ QTabWidget::pane
 QTabBar::tab  
 {
     background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #E1E1E1, stop: 0.4 #DDDDDD, stop: 0.5 #D8D8D8, stop: 1.0 #D3D3D3);
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
+    border-radius: 4px;
     min-width:30px;
     padding: 2px 5px 2px 5px;
 }
@@ -181,7 +181,7 @@ QPushButton
     border-width: 1px;
     border-color: #1e1e1e;
     border-style: solid;
-    border-radius: 6;
+    border-radius: 2;
     padding: 3px;
     font-size: 12px;
     padding-left: 5px;
